# weather-station-mssbabou

./: .gitignore  .gitmodules  README.md
ArduinoFirmware/: platformio.ini
ArduinoFirmware/src/: main.cpp
MQTTClient/: BuildCMake.sh  BuildRun.sh  CMakeLists.txt  DockerLinuxBuild.sh  Dockerfile
MQTTClient/include/: config.h  db.h  json.h  mqtt.h  utils.h  weatherData.h  weatherdb.h
MQTTClient/src/: db.c  json.c  main.c  mqtt.c  utils.c  weatherData.c  weatherdb.c
weather-next-app/: package-lock.json  package.json
weather-next-app/app/: layout.js  page.js
weather-next-app/app/api/ollama/: route.js
weather-next-app/app/api/weather/: route.js
weather-next-app/app/lib/: db.js
